Revert "ITP Tests: Handle sequential interpolation. Sequential interpolants are not supported for independent interpolation currently. Therefore, check what interpolation strategy is used and if an UnsupportedException is thrown. Create a new requireIndependentSeqInterpolation method"
This reverts commit d4a31e79ebf0a1633f51bc573bc8ae854910fe2a.